[workspace]
members = [
    "blockchain-data-derive",
    "blockchain-data-macro",
    "blockchain-types/mamoru-aptos-types",
    "blockchain-types/mamoru-evm-types",
    "blockchain-types/mamoru-sui-types",
    "mamoru-account",
    "mamoru-core",
    "mamoru-core-test-utils",
    "mamoru-sniffer",
    "mamoru-sniffer-c",
    "query-validator",
    "query-validator-c",
    "sdk-as/mamoru-aptos-sdk-tests",
    "sdk-as/mamoru-evm-sdk-tests",
    "sdk-as/mamoru-sui-sdk-tests",
]

[workspace.dependencies]
# Use custom `cosmrs` due to breaking dependency with `sui` integration.
# See https://github.com/Mamoru-Foundation/cosmos-rust/commit/093a4078a3d516d84acc0aaade4d0d581f83f9ab
cosmrs = { git = "https://github.com/Mamoru-Foundation/cosmos-rust.git", rev = "5e0ed6c" }
datafusion = { version = "23.0.0", default-features = false, features = ["crypto_expressions", "unicode_expressions"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
