[package]
edition = "2021"
name = "mamoru-core"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
blockchain-data-macro = { path = "../blockchain-data-macro", optional = true }
chrono = { workspace = true }
datafusion = { workspace = true }
maplit = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
env_logger = "0.10.0"
reqwest = { version = "0.11", features = ["json"] }
test-log = { version = "0.2.11", features = ["trace"] }
tokio = { workspace = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

[features]
test_data = ["blockchain-data-macro", "maplit"]
