[package]
edition = "2021"
name = "mamoru-core"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
as-ffi-bindings = { git = "https://github.com/Mamoru-Foundation/as-ffi-bindings.git" }
async-trait = "0.1"
bincode = "1.3"
blockchain-data-macro = { path = "../blockchain-data-macro", optional = true }
chrono = { workspace = true }
datafusion = { workspace = true }
hex = "0.4"
maplit = { version = "1.0", optional = true }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { workspace = true }
tracing = "0.1"
wasmer = "3.1"

[dev-dependencies]
env_logger = "0.10"
expect-test = "1.4"
mockito = { version = "1.0" }
tempfile = "3.3"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

[features]
test_data = ["blockchain-data-macro", "maplit"]
