[package]
edition = "2021"
name = "mamoru-core"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
as-ffi-bindings = { git = "https://github.com/Mamoru-Foundation/as-ffi-bindings.git" }
async-trait = "0.1"
base64 = "0.21.2"
blockchain-data-macro = { path = "../blockchain-data-macro", optional = true }
chrono = { workspace = true }
datafusion = { workspace = true }
ethabi = "18.0.0"
ethnum = { version = "1.3.2", features = ["serde"] }
handlebars = "4.3.7"
hex = "0.4"
itertools = "0.11.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
rmp-serde = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["base64"] }
thiserror = "1.0"
tokio = { workspace = true }
tracing = "0.1"
wasmer = "3.1"

[dev-dependencies]
env_logger = "0.10"
expect-test = "1.4"
mamoru-core-test-utils = { path = "../mamoru-core-test-utils" }
maplit = "1.0"
mockito = { version = "1.0" }
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

[features]
testing = []
