[package]
name = "mamoru-evm-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockchain-data-macro = { path = "../blockchain-data-macro" }
datafusion = { workspace = true }
mamoru-core = { path = "../mamoru-core" }
