[package]
name = "mamoru-sui-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockchain-data-derive = { path = "../blockchain-data-derive" }
datafusion = { workspace = true }
mamoru-core = { path = "../mamoru-core" }
