[package]
name = "playbook-engine"
description = "Executes playbooks"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true, features = ["serde"] }
expect-test = "1.4.1"
handlebars = "4.3.7"
mamoru-core = { path = "../mamoru-core" }
nom = "7.1.3"
serde = {version = "1.0.183", features = ["derive"]}
thiserror = "1.0.45"

[dev-dependencies]
maplit = "1.0.2"
serde_yaml = "0.9.25"
