[package]
name = "query-validator"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
datafusion = { workspace = true }
mamoru-core = { path = "../mamoru-core" }
thiserror = "1.0"

mamoru-aptos-types = { path = "../mamoru-aptos-types" }
mamoru-evm-types = { path = "../mamoru-evm-types" }
mamoru-sui-types = { path = "../mamoru-sui-types" }

[dev-dependencies]
tokio = { workspace = true }
