[package]
name = "query-validator"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
datafusion = { workspace = true }

mamoru-aptos-types = { path = "../blockchain-types/mamoru-aptos-types" }
mamoru-core = { path = "../mamoru-core" }
mamoru-evm-types = { path = "../blockchain-types/mamoru-evm-types" }
mamoru-sui-types = { path = "../blockchain-types/mamoru-sui-types" }
thiserror = "1.0"

[dev-dependencies]
tokio = { workspace = true }
